--- a/LoginCSS.css
+++ b/LoginCSS.css
@@ -1,9 +1,9 @@
 *{
     box-sizing: border-box;
+    list-style: none;
 }
 nav{
-    background-color:#999999;
-    padding: 10px;
+    display: flex;
 
 }
 footer{
